- Add @since annotations on new JASYPT properties - Add new Jasypt properties to the README.md - Correct spelling of jasyptProperties variable - Refactor JaysptDecrypterTest class to consolidate logic and avoid repetition